@@ -1,6 +1,8 @@
 package test.autoTrade;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 
@@ -10,9 +12,9 @@ import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 
 public class TradeUtil {
-	public String baseURL = null;
+	protected String baseURL = null;
 	
-	protected TradeUtil(String _baseURL) {
+	public TradeUtil(String _baseURL) {
 		this.baseURL = _baseURL;
 	}
 	
@@ -33,18 +35,30 @@ public class TradeUtil {
 		return param;
 	}
 	
-	public Connection getConnect(String query) throws MalformedURLException {
+	public Connection getConnect(String urlStr) throws MalformedURLException, URISyntaxException {
 
 		Connection conn = null;
-		if (query == null) {query = "";}
-		if (!query.equals("")){
-			query = "?"+query;
-		}	
 
-		URL url = new URL(this.baseURL);
-		String host = url.getHost();
+		if (urlStr == null) {urlStr = "";}
+		URI checkAbsolute = new URI(urlStr);
+		
+		URL hostUrl = null;
+		String connectUrl = null;
+		if (checkAbsolute.isAbsolute()) {
+			//絶対パス
+			hostUrl = new URL(urlStr);
+			connectUrl = urlStr;
+		} else {
+			if (!urlStr.equals("")){
+				urlStr = "?"+urlStr;
+			}
+			hostUrl = new URL(this.baseURL);
+			connectUrl = baseURL + urlStr;
+		}
+		
+		String host = hostUrl.getHost();
 
-		conn = Jsoup.connect(baseURL + query)
+		conn = Jsoup.connect(connectUrl)
 				.header("Accept",
 						"text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8")
 				.header("Accept-Encoding", "gzip, deflate, br").header("Accept-Language", "ja,en-US;q=0.9,en;q=0.8")
